--- a/_posts/2021-02-16-sample-5.md
+++ b/_posts/2021-02-16-sample-5.md
@@ -1,7 +1,7 @@
 ---
 title: "The worst memories - part 2"
 date: 1400-03-16T00:00:00+00:00
-author: Attila Roshani
+author: Attila Roshani khiyavy
 layout: post
 permalink: /ullamcorper-convallis-a-placerat-consectetur-condimentumnone/
 categories: Genel
