--- a/_posts/2021-02-09-sample-3.md
+++ b/_posts/2021-02-09-sample-3.md
@@ -1,7 +1,7 @@
 ---
 title: "The worst memories - part 1"
 date: 1400-09-07T00:00:00+00:00
-author: Attila Roshani
+author: Attila Roshani khiyavy
 layout: post
 permalink: /justo-imperdiet-condimentum-ad-cum-acanone/
 categories: Genel
