--- a/_posts/2021-02-23-sample-6.md
+++ b/_posts/2021-02-23-sample-6.md
@@ -1,7 +1,7 @@
 ---
 title: "The worst memories - part 3"
 date: 1400-10-15T00:00:00+00:00
-author: Attila Roshani
+author: Attila Roshani khiyavy
 layout: post
 permalink: /mattis-pulvinar-nam-vivamus-magna-tempus-primis-habitassenone/
 categories: Genel
