--- a/_posts/2021-02-09-sample-3.md
+++ b/_posts/2021-02-09-sample-3.md
@@ -10,7 +10,7 @@ tags: [lorem, ipsum]
 ## Vnce Morrison 
 One of the worst memories I had in my first semester of college was finishing an opportunity to practice with Vance Morrison. While I was not done yet
 
-![vance](/assets/images/vancemorrison.jpg "vance")
+![Ephesus](/assets/images/vancemorrison.jpg "Ephesus")
 
 
 
