--- a/_posts/2021-02-16-sample-5.md
+++ b/_posts/2021-02-16-sample-5.md
@@ -9,5 +9,5 @@ tags: [lorem, ipsum]
 ---
 
 ## Entrance Exam
-it was very streessful
-![Entrance Exam](/assets/images/EntranceExam.jpg "Entrance Exam")
+roze sakhti bud , aval ke vared sakhtoman azmon shodam az aval midunestam garare kheyli sakht bashe azmon baraye hamin khodamo amad yek azmon sakht karde budam ; badidan soalaye omumi ke nesbatan ason budam kami omidvar shude budam vali ba didan sovalaye riyazi ke hatta az sath tavagoe man ham sahkt tar bud kolan pashmam rikht va azmuno kharab kardam
+![Ephesus](/assets/images/EntranceExam.jpg "Ephesus")
