--- a/_posts/2021-02-23-sample-6.md
+++ b/_posts/2021-02-23-sample-6.md
@@ -11,4 +11,4 @@ tags: [lorem, ipsum]
 beacuase i dont have any idea for deploying django project
 
 
-![Exam](/assets/images/exam.jpg "Exam")
+![Ephesus](/assets/images/exam.jpg "Ephesus")
